# attendance_customization

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
attendance_customization/: hooks.py  hooks.py.save  modules.txt  patches.txt
attendance_customization/attendance_customization/: attendance_hooks.py  attendance_immediate_processor.py  tasks.py
attendance_customization/attendance_customization/custom/: attendance.json
attendance_customization/attendance_customization/custom_fields/: attendance_custom_fields.py
attendance_customization/attendance_customization/setup/: install.py
attendance_customization/attendance_customization/tasks/: half_day_absent_checker.py  late_strike_processor.py
attendance_customization/config/: desktop.py  docs.py
attendance_customization/doctype_events/: attendance.py  attendance_request.py  employee_checkin.py  leave_allocation.py  leave_application.py
attendance_customization/fixtures/: custom_field.json  custom_fields.json  doctype.json  property_setter.json
attendance_customization/patches/: add_attendance_fields.py  add_attendance_request_other_reason.py  add_reset_count_field.py  create_attendance_fields.py  fix_dual_half_day_attendance.py  fix_half_day_leave_attendance.py  fix_half_day_present_status.py  fix_half_day_present_status_v2.py  hide_strike_fields.py  update_remark_field.py
attendance_customization/public/js/: attendance.js
attendance_customization/setup/: install.py
memory/: MEMORY.md
(+8 files in other folders)
