[project]
name = "attendance_customization"
authors = [
    { name = "ravi", email = "ravi@campx.in"}
]
description = "Custom fields and logic for Attendance tracking"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # frappe is installed and managed by bench
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0 <17.0.0"
erpnext = ">=15.0.0 <17.0.0"
hrms = ">=15.0.0 <17.0.0"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
